--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query": "^5.32.0",
     "@tanstack/react-query-devtools": "^5.32.0",
     "@types/react-modal": "^3.16.3",
+    "ag-grid-react": "^33.0.3",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
